# gpxfix

./: .gitignore  LICENSE  README.md  gpx_repair.py  pyproject.toml  setup.py
.github/workflows/: pypi.yml
Corrected Files/: Example_repaired.gpx
Original Files/: example.gpx
Snippets/: exampleFitEnd.gpx  exampleFitMiddle.gpx  exampleFitStart.gpx
gpxfix/: __init__.py  __main__.py  main.py
